Realizei a tela de perfil

--- a/static_devconnect/styles/global.css
+++ b/static_devconnect/styles/global.css
@@ -2,41 +2,187 @@
 @import url('https://fonts.googleapis.com/css2?family=Inter:ital,opsz,wght@0,14..32,100..900;1,14..32,100..900&display=swap');
 
 /* 2 forma de utilizar */
-@font-face{
+@font-face {
     font-family: Inter;
     src: url(../assets/fonts/Inter-VariableFont_opsz\,wght.ttf);
-      
+
 }
- /* variaveis */
-:root{
-   --cor-preto: #000000;
-   --cor-marrom: #B6B6B6;
-   --cor-bege: #FAFAFA;
-   --cor-marrom-terra: #e48c5a;
-   --cor-bege-claro: #DAB49D;
 
-   --borda: 1px solid var(--cor-marrom-terra);
-   --borda-arredondada: 2px;
+/* variaveis */
+:root {
+    --cor-preto: #000000;
+    --cor-marrom: #B6B6B6;
+    --cor-bege: #FAFAFA;
+    --cor-marrom-terra: #e48c5a;
+    --cor-bege-claro: #DAB49D;
 
-   --tamanho-fonte-lg: 20px;
-   --tamanho-fonte-lg: 16px;
-   --tamanho-fonte-lg: 14px;
+    --borda: 1px solid var(--cor-preto);
+    --borda-arredondada: 2px;
+
+    --tamanho-fonte-lg: 20px;
+    --tamanho-fonte-md: 16px;
+    --tamanho-fonte-sm: 14px;
 }
 
 /* SELETOR GLOBAL*/
-*{
-      padding: 0%; /* espaço interno*/
-      margin: 0;   /* espaço externo*/
-      box-sizing: border-box; 
-      font-family: "inter" serif;
+* {
+    padding: 0%;
+    /* espaço interno*/
+    margin: 0;
+    /* espaço externo*/
+    box-sizing: border-box;
+    font-family: "Inter", sans-serif;
+    outline-color: var(--cor-marrom-terra);
+
 }
-body{
+
+body {
+    background-color: var(--cor-marrom-terra);
+
+}
+
+h1 {
+    position: absolute;
+    /* altera a posição do elemento*/
+    z-index: -1;
+    /* camadas do elemento*/
+    opacity: 0;
+    /* opacidade */
+}
+
+/* formulario */
+.formulario-campos {
+    display: flex;
+    flex-direction: column;
+    width: 100%;
+    gap: 5px;
+}
+
+.formulario-botao-marrom-terra {
+    background-color: var(--cor-bege-claro);
+    border-radius: var(--borda-arredodada);
+    border: none;
+    /*tira a borda*/
+    height: 35px;
+
+    color: var(--cor-preto);
+    font-size: var(--tamanho-fonte-sm);
+}
+
+.formulario-campos>input {
+    border: var(--borda);
+
+    width: 100%;
+    height: 35px;
     background-color: var(--cor-bege);
 
+    color: var(--cor-cinza-escuro2);
+    font-size: var(--tamanho-fonte-sm);
+    border-radius: var(--borda-arredondada);
 }
 
-h1{
-    position: absolute; /* altera a posição do elemento*/
-    z-index: -1; /* camadas do elemento*/
-    opacity: 0; /* opacidade */
+.formulario-campos>label {
+    font-size: var(--tamanho-fonte-sm);
+    color: var(--cor-cinza-escuro2);
+    font-weight: 600;
+}
+
+.estilo-formulario {
+    width: 100%;
+    background-color: var(--cor-branco);
+    border: var(--borda);
+}
+
+#campo-upload {
+    display: none;
+}
+
+#texto-upload {
+    display: inline-block;
+    width: 100%;
+    max-width: 300px;
+    height: 35px;
+    padding: 5px;
+    background-color: var(--cor-marrom);
+    color: var(--cor-preto);
+    text-align: center;
+    border-radius: var(--borda-arredodada);
+    font-weight: 500;
+}
+
+
+/* cabeçalho */
+#cabecalho {
+    background-color: var(--cor-bege);
+    width: 100%;
+    height: 80px;
+    display: flex;
+    justify-content: center;
+    /*Alinha os filhos na direção do flex*/
+    border-bottom: var(--borda);
+}
+
+#cabecalho>nav {
+    width: 85%;
+    max-width: 900px;
+    height: 100%;
+    display: flex;
+    align-items: center;
+    /*Alinha os filhos na direção contraria do flex*/
+    justify-content: space-between;
+}
+
+#logo-mobile {
+    display: none;
+}
+
+.cabecalho-acoes {
+    display: flex;
+    align-items: center;
+    gap: 15px;
+}
+
+.cabecalho-acoes>a {
+    display: flex;
+    align-items: center;
+}
+
+.foto-perfil {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    /*mantem a proporção com um zoom para adaptar ao tamanho do elemento*/
+    object-position: center;
+    border-radius: 50%;
+}
+
+.foto-perfil-grande {
+    width: 80px;
+    height: 80px;
+    object-fit: cover;
+    /*mantem a proporção com um zoom para adaptar ao tamanho do elemento*/
+    object-position: center;
+    border-radius: 50%;
+}
+
+
+
+
+/* RESPONSIVO */
+@media only screen and (max-width: 500px) {
+    #logo-mobile {
+        display: initial;
+    }
+
+    #logo-desktop {
+        display: none;
+    }
+}
+
+.foto-perfil {
+    width: 40px;
+    height: 40px;
+    object-fit: cover;
+    object-position: center;
+    border-radius: 50%;
 }
